# haskell-rtaudio

./: Makefile  README.md  RtAudio.cabal  package.yaml
.circleci/: config.yml
examples/: playback.hs  report.hs
src/Sound/: RtAudio.hs
src/Sound/RtAudio/: Buffers.hs  Flag.hs  Foreign.hs  Foreign.hsc  Report.hs
test/: Main.hs
wrapper/: wrapper.cpp  wrapper.h
